bin/testsuite/tests/compiler/src/errors/compiler3739.swg
//#global testerror

//#[Swag.PrintBc, Swag.Optimize(.All, false)]
#[Swag.Safety(.All, .All, false)]
#test
{
    let x = 1

    //#[Swag.Complete]
    switch x
    {
    case 0:
        @print("0")
    }
}
